welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(b>a || c>b){
    ^inOrder:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if(c>b) return true
    ^